--- a/src/app/demo/components/masterddo/masterddo.component.html
+++ b/src/app/demo/components/masterddo/masterddo.component.html
@@ -1,6 +1,6 @@
 <div class="flex flex-wrap align-items-center justify-content-end mb-5">
     <div class="addstubutt"><p-button (click)="showDialog()"
-      label="ADD DATA"></p-button>
+      label="ADD DDO"></p-button>
     </div>
     <form [formGroup]="userForm" >
     <p-dialog class="custom-dialog" [header]="headertext" [closable]="true" [modal]="true"
