--- a/src/app/demo/components/treasury/treasury.component.html
+++ b/src/app/demo/components/treasury/treasury.component.html
@@ -1,3 +1,86 @@
-<p>treasury works!</p>
-<h1>Hello Treasury</h1>
-<h1>Hello DJ</h1>
+
+
+<div class="flex flex-wrap align-items-center justify-content-end mb-5">
+    <div class="addstubutt"><p-button (click)="showDialog()"
+      label="ADD TREASURY"></p-button>
+    </div>
+    <form [formGroup]="userForm" >
+    <p-dialog class="custom-dialog" header="Edit Profile" [closable]="true" [modal]="true"
+        [(visible)]="visible" [style]="{ width: '50rem' }" (onHide)="hide(userForm)">
+  
+        
+          <div class="formgrid grid">
+            <div class="field col">
+                <label for="firstname2">District Name <span class="red"> *</span></label>
+                <input id="firstname2" type="text" class="text-base text-color surface-overlay p-3 hover:shadow-1 border-2 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full" formControlName="districtName">
+                <div *ngIf="userForm.get('districtName')?.invalid && userForm.get('districtName')?.touched" class="error">
+                    District Name is required and should not exceed 30 characters.
+                  </div>
+            </div>
+            <div class="field col">
+                <label for="lastname2">District Code</label>
+                <input id="lastname2" type="number" class="text-base text-color surface-overlay p-3 hover:shadow-1 border-2 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full" formControlName="districtCode">
+                <!-- <div *ngIf="userForm.get('districtCode')?.invalid && userForm.get('districtCode')?.touched" class="error">
+                    District Code is required and should not exceed 3 characters.
+                  </div> -->
+            </div>
+          </div>
+          <div class="formgrid grid">
+          <div class="field col">
+            <label for="firstname2">Code <span class="red"> *</span></label>
+            <input id="firstname2" type="text" class="text-base text-color surface-overlay p-3 hover:shadow-1 border-2 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full" formControlName="Code">
+            <div *ngIf="userForm.get('Code')?.invalid && userForm.get('Code')?.touched" class="error">
+                Code is required and should not exceed 3 characters.
+              </div>
+          </div>
+          <div class="field col">
+            <label for="firstname2">Name <span class="red"> *</span></label>
+            <input id="firstname2" type="text" class="text-base text-color surface-overlay p-3 hover:shadow-1 border-2 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full" formControlName="name">
+            <div *ngIf="userForm.get('name')?.invalid && userForm.get('name')?.touched" class="error">
+                Name is required and should not exceed 100 characters.
+              </div>
+          </div>
+          </div>
+          
+          
+  
+          <div class="button-container" *ngIf="isSubUp; else elseBlock">
+            <div class="formgrid grid">
+              <div class="col-9">
+                <p-button class="flex flex-wrap align-items-center justify-content-end mt-4" label="Cancel" icon="pi pi-times" iconPos="left" (click)="cancel(userForm)" ></p-button>
+              </div>
+              <div class="field col">
+                <p-button class="flex flex-wrap align-items-center justify-content-end mr-5 mt-4" label="Submit" icon="pi pi-check" iconPos="left" (click)="submit(userForm)" ></p-button>
+              </div>
+            </div>
+          </div>
+          <ng-template #elseBlock>
+            <div class="formgrid grid">
+              <div class="col-9">
+                <p-button class="flex flex-wrap align-items-center justify-content-end mt-4" label="Cancel" icon="pi pi-times" iconPos="left" (click)="cancel(userForm)" ></p-button>
+              </div>
+              <div class="field col">
+                <p-button class="flex flex-wrap align-items-center justify-content-end mr-5 mt-4" label="Update" icon="pi pi-check" iconPos="left" (click)="update(userForm)" ></p-button>
+              </div>
+            </div>
+          </ng-template>
+      
+    </p-dialog>
+  </form>
+  <p-toast></p-toast>
+  </div>
+  
+  <mh-prime-dynamic-table *ngIf="tableData!=null||tableData!=undefined"
+    size="small"
+    [numberRowsShown]="10"
+    [rowsPerPageOptions]="[10, 30, 50]"
+    [headers]="tableData.headers"
+    [data]="tableData.data"
+    rowSelectionMode="multiple"
+    [dataCount]="alldata"
+    [actionButtons]="actionButtonConfig"
+    (rowSelect)="handleRowSelection($event)"
+    (actionButtonClicked)="handleButtonClick($event)"
+    (queryParameterChange)="handQueryParameterChange($event)"
+  >
+  </mh-prime-dynamic-table>
