--- a/src/app/demo/components/schemehead/schemehead.component.html
+++ b/src/app/demo/components/schemehead/schemehead.component.html
@@ -1,1 +1,97 @@
-<p>schemehead works!</p>
+<div class="flex flex-wrap align-items-center justify-content-end mb-5">
+    <div class="addstubutt"><p-button (click)="showDialog()"
+      label="ADD SchemeHead"></p-button>
+    </div>
+    <form [formGroup]="userForm" >
+    <p-dialog class="custom-dialog" [header]="headertext" [closable]="true" [modal]="true"
+        [(visible)]="visible" [style]="{ width: '50rem' }" (onHide)="hide(userForm)">
+  
+        
+          <div class="formgrid grid">
+            <div class="field col">
+                <label class="text-2xl" for="firstname2">Demand Code*</label>
+                <input id="firstname2" type="number" class="text-base text-color surface-overlay p-3 hover:shadow-1 border-2 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full" formControlName="DemandCode">
+                <div *ngIf="userForm.get('DemandCode')?.invalid && userForm.get('DemandCode')?.touched" class="error">
+                  Demand Code is required <div class=""></div>
+                </div>
+            </div>
+            <div class="field col">
+                <label class="text-2xl" for="firstname2">Code*</label>
+                <input id="firstname2" type="number" class="text-base text-color surface-overlay p-3 hover:shadow-1 border-2 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full" formControlName="Code">
+                <div *ngIf="userForm.get('Code')?.invalid && userForm.get('Code')?.touched" class="error">
+                  Code is required.
+                </div>
+              </div>
+          </div>
+          <div class="formgrid grid">
+          <div class="field col">
+            <label class="text-2xl" for="firstname2">Name*</label>
+            <input id="firstname2" type="text" class="text-base text-color surface-overlay p-3 hover:shadow-1 border-2 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full" formControlName="Name">
+            <div *ngIf="userForm.get('Name')?.invalid && userForm.get('Name')?.touched" class="error">
+              Designation Mstld is required.
+            </div>
+          </div>
+          </div>
+          <div class="formgrid grid">
+          <div class="field col">
+            <label class="text-2xl" for="lastname2">Minor Head Id*</label>
+            <input id="lastname2" type="number" class="text-base text-color surface-overlay p-3 hover:shadow-1 border-2 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full" formControlName="MinorHeadId">
+            <div *ngIf="userForm.get('MinorHeadId')?.invalid && userForm.get('MinorHeadId')?.touched" class="error">
+              Minor Head ID is required.
+            </div>
+          </div>
+          <!-- <div class="field col">
+            <label class="text-2xl" for="firstname2">Phone*</label>
+            <input id="firstname2" type="text" class="text-base text-color surface-overlay p-3 hover:shadow-1 border-2 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full" formControlName="Phone">
+            <div *ngIf="userForm.get('Phone')?.invalid && userForm.get('Phone')?.touched" class="error">
+              Phone is required.
+            </div>
+          </div> -->
+          </div>
+          <!-- <div class="formgrid grid">
+            <div class="field col">
+              <label class="text-2xl" for="firstname2">Address</label>
+              <input id="firstname2" type="text" class="text-base text-color surface-overlay p-3 hover:shadow-1 border-2 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full" formControlName="Address">
+            </div>
+          </div> -->
+  
+          <div class="button-container" *ngIf="isSubUp; else elseBlock">
+            <div class="formgrid grid">
+              <div class="col-9">
+                <p-button class="flex flex-wrap align-items-center justify-content-end mt-4" label="Cancel" icon="pi pi-times" iconPos="left" (click)="cancel(userForm)" ></p-button>
+              </div>
+              <div class="field col">
+                <p-button class="flex flex-wrap align-items-center justify-content-end mr-5 mt-4" label="Submit" icon="pi pi-check" iconPos="left" (click)="submit(userForm)" [disabled]="userForm.invalid" ></p-button>
+              </div>
+            </div>
+          </div>
+          <ng-template #elseBlock>
+            <div class="formgrid grid">
+              <div class="col-9">
+                <p-button class="flex flex-wrap align-items-center justify-content-end mt-4" label="Cancel" icon="pi pi-times" iconPos="left" (click)="cancel(userForm)" ></p-button>
+              </div>
+              <div class="field col">
+                <p-button class="flex flex-wrap align-items-center justify-content-end mr-5 mt-4" label="Update" icon="pi pi-check" iconPos="left" (click)="update(userForm)" [disabled]="userForm.invalid" ></p-button>
+              </div>
+            </div>
+          </ng-template>
+      
+    </p-dialog>
+  </form>
+  <p-toast></p-toast>
+  </div>
+  
+  <mh-prime-dynamic-table *ngIf="tableData!=null||tableData!=undefined"
+    size="small"
+    [numberRowsShown]="10"
+    [rowsPerPageOptions]="[10, 30, 50]"
+    [headers]="tableData.headers"
+    [data]="tableData.data"
+    rowSelectionMode="multiple"
+    [dataCount]="alldata"
+    [actionButtons]="actionButtonConfig"
+    (rowSelect)="handleRowSelection($event)"
+    (actionButtonClicked)="handleButtonClick($event)"
+    (queryParameterChange)="handQueryParameterChange($event)"
+  >
+  </mh-prime-dynamic-table>
