--- a/src/app/demo/components/masterddo/masterddo.component.scss
+++ b/src/app/demo/components/masterddo/masterddo.component.scss
@@ -5,6 +5,6 @@
 .red{
     color: red;
 }
-.custom-dialog {
-    background-color: rgba(0, 0, 255, 0.5); /* Transparent blue background */
-  }
+// .custom-dialog {
+//     background-color: rgba(253, 208, 7, 0.5); /* Transparent blue background */
+//   }
