--- a/src/app/demo/components/masterddo/masterddo.component.html
+++ b/src/app/demo/components/masterddo/masterddo.component.html
@@ -1,8 +1,16 @@
-<div class="flex flex-wrap align-items-center justify-content-end mb-5">
-  <div class="addstubutt"><p-button (click)="showDialog()" label="ADD DDO"></p-button>
+<div class=" mb-5">
+  <div class="card" style="border: 1px solid;background-image: linear-gradient(to left, #243949 0%, #517fa4 100%);
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset; height: fit-content; display: flex; justify-content: space-between; align-items: center; padding: 1rem;">
+    <h2 style="color: white;font-family: sans-serif;">DDO Table</h2>
+    <p-button class="mb-10" (click)="showDialog()" label="ADD DDO">
+      <i class="pi pi-plus mr-3"></i>
+    </p-button>
   </div>
+<div class="flex flex-wrap align-items-center justify-content-end mb-5">
+  <!-- <div class="addstubutt"><p-button (click)="showDialog()" label="ADD DDO"></p-button>
+  </div> -->
   <form [formGroup]="userForm">
-    <p-dialog class="custom-dialog" [contentStyle]="{'background-color':'rgb(222, 248, 247)'}" [header]="headertext" [closable]="true" [modal]="true" [(visible)]="visible"
+    <p-dialog class="custom-dialog" [header]="headertext" [closable]="true" [modal]="true" [(visible)]="visible"
       [style]="{ width: '50rem' }" (onHide)="hide(userForm)">
 
       <div class="mb-4 mt-3">
@@ -64,10 +72,10 @@
         <div class="formgrid grid">
           <div class="col-9">
             <p-button class="flex flex-wrap align-items-center justify-content-end mt-4" label="Cancel"
-              icon="pi pi-times" iconPos="left" (click)="cancel(userForm)"></p-button>
+              icon="pi pi-times" iconPos="left" styleClass="p-button-warning" (click)="cancel(userForm)"></p-button>
           </div>
           <div class="field col">
-            <p-button class="flex flex-wrap align-items-center justify-content-end mr-5 mt-4" label="Submit"
+            <p-button class="flex flex-wrap align-items-center justify-content-end mr-5 mt-4" styleClass="p-button-success" label="Submit"
               icon="pi pi-check" iconPos="left" (click)="submit(userForm)" ></p-button>
           </div>
         </div>
@@ -77,11 +85,11 @@
         <div class="formgrid grid">
           <div class="col-9">
             <p-button class="flex flex-wrap align-items-center justify-content-end mt-4" label="Cancel"
-              icon="pi pi-times" iconPos="left" (click)="cancel(userForm)"></p-button>
+              icon="pi pi-times" iconPos="left" styleClass="p-button-warning" (click)="cancel(userForm)"></p-button>
           </div>
           <div class="field col">
             <p-button class="flex flex-wrap align-items-center justify-content-end mr-5 mt-4" label="Update"
-              icon="pi pi-check" iconPos="left" (click)="update(userForm)"></p-button>
+              icon="pi pi-check" iconPos="left" styleClass="p-button-success" (click)="update(userForm)"></p-button>
           </div>
         </div>
       </div>
