--- a/src/app/demo/components/treasury/treasury.component.html
+++ b/src/app/demo/components/treasury/treasury.component.html
@@ -1,9 +1,11 @@
-
-
-<div class="flex flex-wrap align-items-center justify-content-end mb-5">
-    <div class="addstubutt"><p-button (click)="showDialog()"
-      label="ADD TREASURY"></p-button>
-    </div>
+<div class=" mb-5">
+  <div class="card" style="border: 1px solid;background-image: linear-gradient(to left, #243949 0%, #517fa4 100%);
+	box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset; height: fit-content; display: flex; justify-content: space-between; align-items: center; padding: 1rem;">
+    <h2 style="color: white;font-family: sans-serif;">Treasury Table</h2>
+    <p-button class="mb-10" (click)="showDialog()" label="ADD TREASURY">
+      <i class="pi pi-plus mr-3"></i>
+    </p-button>
+  </div>
     <form [formGroup]="userForm" >
     <p-dialog class="custom-dialog" header="Edit Profile" [closable]="true" [modal]="true"
         [(visible)]="visible" [style]="{ width: '50rem' }" (onHide)="hide(userForm)">
