--- a/src/app/demo/components/treasury/treasury.component.html
+++ b/src/app/demo/components/treasury/treasury.component.html
@@ -29,14 +29,14 @@
           </div>
           <div class="formgrid grid">
           <div class="field col">
-            <label for="firstname2">Code <span class="red"> *</span></label>
+            <label for="firstname2">Treasury Code <span class="red"> *</span></label>
             <input id="firstname2" type="text" class="text-base text-color surface-overlay p-3 hover:shadow-1 border-2 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full" formControlName="Code">
             <div *ngIf="userForm.get('Code')?.invalid && userForm.get('Code')?.touched" class="error">
                 Code is required and should not exceed 3 characters.
               </div>
           </div>
           <div class="field col">
-            <label for="firstname2">Name <span class="red"> *</span></label>
+            <label for="firstname2">Treasury Name <span class="red"> *</span></label>
             <input id="firstname2" type="text" class="text-base text-color surface-overlay p-3 hover:shadow-1 border-2 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full" formControlName="name">
             <div *ngIf="userForm.get('name')?.invalid && userForm.get('name')?.touched" class="error">
                 Name is required and should not exceed 100 characters.
@@ -52,7 +52,7 @@
                 <p-button class="flex flex-wrap align-items-center justify-content-end mt-4" label="Cancel" icon="pi pi-times" iconPos="left" (click)="cancel(userForm)" ></p-button>
               </div>
               <div class="field col">
-                <p-button class="flex flex-wrap align-items-center justify-content-end mr-5 mt-4" label="Submit" icon="pi pi-check" iconPos="left" (click)="submit(userForm)" ></p-button>
+                <p-button class="flex flex-wrap align-items-center justify-content-end mr-5 mt-4" label="Submit" [disabled]="userForm.invalid" icon="pi pi-check" iconPos="left" (click)="submit(userForm)" ></p-button>
               </div>
             </div>
           </div>
