--- a/src/app/demo/components/masterddo/masterddo.component.html
+++ b/src/app/demo/components/masterddo/masterddo.component.html
@@ -16,7 +16,7 @@
       <div class="mb-4 mt-3">
         <label class="text-2xl" for="firstname2">Select Treasury <span class="red"> *</span> : </label>
         <p-dropdown class="ml-3" [style]="{'width':'72%'}" [options]="codes" formControlName="TreasuryCode"
-          placeholder="Select Treasury" optionLabel="name" optionValue="code">
+          placeholder="Select Treasury" optionLabel="name" optionValue="code" (onChange)="getTcode()">
           <ng-template let-option pTemplate="item">
             {{ option.code }} : {{ option.name }}
           </ng-template>
@@ -28,7 +28,7 @@
       <div class="formgrid grid">
         <div class="field col">
           <label class="text-2xl" for="firstname2">DDO Code<span class="red"> *</span> :</label>
-          <input id="firstname2" type="text"
+          <input id="firstname2" type="text" [value]="getTCode"
             class="text-base text-color surface-overlay p-3 hover:shadow-1 border-2 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full"
             formControlName="Code">
           <div *ngIf="userForm.get('Code')?.invalid && userForm.get('Code')?.touched" class="error">
