--- a/src/app/demo/components/treasury/treasury.component.html
+++ b/src/app/demo/components/treasury/treasury.component.html
@@ -52,7 +52,7 @@
                 <p-button class="flex flex-wrap align-items-center justify-content-end mt-4" label="Cancel" icon="pi pi-times" iconPos="left" (click)="cancel(userForm)" ></p-button>
               </div>
               <div class="field col">
-                <p-button class="flex flex-wrap align-items-center justify-content-end mr-5 mt-4" label="Submit" [disabled]="userForm.invalid" icon="pi pi-check" iconPos="left" (click)="submit(userForm)" ></p-button>
+                <p-button class="flex flex-wrap align-items-center justify-content-end mr-5 mt-4" label="Submit"  icon="pi pi-check" iconPos="left" (click)="submit(userForm)" ></p-button>
               </div>
             </div>
           </div>
