style in btn add

--- a/src/app/demo/components/department/department.component.html
+++ b/src/app/demo/components/department/department.component.html
@@ -179,11 +179,11 @@
         <div class="formgrid grid">
           <div class="col-9">
             <p-button class="flex flex-wrap align-items-center justify-content-end mt-4" label="Cancel"
-              icon="pi pi-times" iconPos="left" (click)="cancel(userForm)"></p-button>
+              icon="pi pi-times"styleClass="p-button-warning" iconPos="left" (click)="cancel(userForm)"></p-button>
           </div>
           <div class="field col">
             <p-button class="flex flex-wrap align-items-center justify-content-end mr-5 mt-4" label="Submit"
-              icon="pi pi-check" iconPos="left" (click)="submit(userForm)"></p-button>
+              icon="pi pi-check" styleClass="p-button-success" iconPos="left" (click)="submit(userForm)"></p-button>
           </div>
         </div>
       </div>
@@ -191,11 +191,11 @@
         <div class="formgrid grid">
           <div class="col-9">
             <p-button class="flex flex-wrap align-items-center justify-content-end mt-4" label="Cancel"
-              icon="pi pi-times" iconPos="left" (click)="cancel(userForm)"></p-button>
+              icon="pi pi-times" styleClass="p-button-warning" iconPos="left" (click)="cancel(userForm)"></p-button>
           </div>
           <div class="field col">
             <p-button class="flex flex-wrap align-items-center justify-content-end mr-5 mt-4" label="Update"
-              icon="pi pi-check" iconPos="left" (click)="update(userForm)"></p-button>
+              icon="pi pi-check" styleClass="p-button-success" iconPos="left" (click)="update(userForm)"></p-button>
           </div>
         </div>
       </ng-template>
