dynamic dialog added and format updated

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -263,11 +263,14 @@ div:where(.swal2-container).swal2-noanimation {
 	background-color: black;
 }
 
-
-
-// .p-dialog{
-
+  
+// .custom-dialog .p-dynamicdialog {
+//     background-image: linear-gradient(to right, #4f98a7 0%, #517fa4 100%);
+//     padding: 20px;
+//     border-radius: 0 0 8px 8px; /* Adjust border-radius to match content area */
+//     color: white; /* Adjust text color for better contrast */
 // }
+
 
   .custom-dialog .p-dialog-content {
 	background-image: linear-gradient(to right, #4f98a7 0%, #517fa4 100%);
@@ -276,12 +279,12 @@ div:where(.swal2-container).swal2-noanimation {
 	color: white; /* Adjust text color for better contrast */
   }
   
-  .custom-dialog .p-dialog {
-	background-image: linear-gradient(to right, #4f98a7 0%, #517fa4 100%);
-	padding: 0;
-	border-radius: 8px;
-	color: white; /* Adjust text color for better contrast */
-  }
+//   .custom-dialog .p-dialog {
+// 	background-image: linear-gradient(to right, #4f98a7 0%, #517fa4 100%);
+// 	padding: 0;
+// 	border-radius: 8px;
+// 	color: white; /* Adjust text color for better contrast */
+//   }
 
 .layout-menu ul a {
 	color: #ffffff;
