--- a/src/app/demo/components/masterddo/masterddo.component.html
+++ b/src/app/demo/components/masterddo/masterddo.component.html
@@ -1,14 +1,15 @@
-<div class=" mb-5">
-  <div class="card" style="border: 1px solid;background-image: linear-gradient(to left, #243949 0%, #517fa4 100%);
+<div class="card"
+  style="border: 1px solid;background-image: linear-gradient(to left, #243949 0%, #517fa4 100%);
   box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset; height: fit-content; display: flex; justify-content: space-between; align-items: center; padding: 1rem;">
-    <h2 style="color: white;font-family: sans-serif;">DDO Table</h2>
-    <p-button class="mb-10" (click)="showDialog()" label="ADD DDO">
-      <i class="pi pi-plus mr-3"></i>
-    </p-button>
-  </div>
-<div class="flex flex-wrap align-items-center justify-content-end mb-5">
-  <!-- <div class="addstubutt"><p-button (click)="showDialog()" label="ADD DDO"></p-button>
-  </div> -->
+  <h2 style="color: white;font-family: sans-serif;">DDO Table</h2>
+  <p-button class="mb-10" (click)="show()" label="ADD DDO">
+    <i class="pi pi-plus mr-3"></i>
+  </p-button>
+</div>
+<!-- <div class="addstubutt"><p-button (click)="showDialog()" label="ADD DDO"></p-button>
+</div> -->
+<!-- <div class="flex flex-wrap align-items-center justify-content-end mb-5">
+  
   <form [formGroup]="userForm">
     <p-dialog class="custom-dialog" [header]="headertext" [closable]="true" [modal]="true" [(visible)]="visible"
       [style]="{ width: '50rem' }" (onHide)="hide(userForm)">
@@ -75,8 +76,9 @@
               icon="pi pi-times" iconPos="left" styleClass="p-button-warning" (click)="cancel(userForm)"></p-button>
           </div>
           <div class="field col">
-            <p-button class="flex flex-wrap align-items-center justify-content-end mr-5 mt-4" styleClass="p-button-success" label="Submit"
-              icon="pi pi-check" iconPos="left" (click)="submit(userForm)" ></p-button>
+            <p-button class="flex flex-wrap align-items-center justify-content-end mr-5 mt-4"
+              styleClass="p-button-success" label="Submit" icon="pi pi-check" iconPos="left"
+              (click)="submit(userForm)"></p-button>
           </div>
         </div>
       </div>
@@ -107,11 +109,17 @@
 
     </p-dialog>
   </form>
-  <p-toast></p-toast>
-</div>
-
+  
+</div> -->
+<p-toast></p-toast>
 <mh-prime-dynamic-table *ngIf="tableData!=null||tableData!=undefined" size="small" [numberRowsShown]="10"
   [rowsPerPageOptions]="[10, 30, 50]" [headers]="tableData.headers" [data]="tableData.data" rowSelectionMode="multiple"
   [dataCount]="alldata" [actionButtons]="actionButtonConfig" (rowSelect)="handleRowSelection($event)"
-  (actionButtonClicked)="handleButtonClick($event)" (queryParameterChange)="handQueryParameterChange($event)" (searchKeyChange)="handleSearch($event)">
+  (actionButtonClicked)="handleButtonClick($event)" (queryParameterChange)="handQueryParameterChange($event)"
+  (searchKeyChange)="handleSearch($event)">
 </mh-prime-dynamic-table>
+
+<!-- <app-masterddodialog></app-masterddodialog> -->
+
+<!-- <p-button class="flex flex-wrap align-items-center justify-content-end mt-4" label="Close"
+                icon="pi pi-times" iconPos="left" routerLink="/ddoDialog"></p-button> -->
